# OpenFusion

./: .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  .vimrc  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  NPCs.json  OpenFusion.sln  OpenFusion.vcxproj  OpenFusion.vcxproj.filters  README.md  appveyor.yml  config.ini  data.db  docker-compose.yml  mobs.json  motd_and_exit.patch  suppr.txt  version.h.in  warps.JSON  win-setup.ps1
.github/workflows/: check-builds.yaml  compile-ubuntu.ps  compiler-windows.ps  push-docker-image.yml
data/: NPCs.json  mobs.json  warps.json
enc_temp_folder/21e2a0c2c135cf25ba5f1ca06a31b611/: NanoManager.cpp
scripts/: test.lua
sql/: migration1.sql  migration2.sql  migration3.sql  migration4.sql  migration5.sql  tables.sql
sql/migrations/: 1.sql
src/: Abilities.cpp  Abilities.hpp  Bucket.hpp  Buddies.cpp  Buddies.hpp  BuddyManager.cpp  BuddyManager.hpp  Buffs.cpp  Buffs.hpp  BuiltinCommands.cpp  BuiltinCommands.hpp  CNLoginServer.cpp  CNLoginServer.hpp  CNProtocol.cpp  CNProtocol.hpp  CNShardServer.cpp  CNShardServer.hpp  CNShared.cpp  CNShared.hpp  CNStructs.cpp  CNStructs.hpp  Chat.cpp  Chat.hpp  ChatManager.cpp  ChatManager.hpp  ChunkManager.cpp  ChunkManager.hpp  Chunking.cpp  Chunking.hpp  Combat.cpp  Combat.hpp  CombatManager.cpp  CombatManager.hpp  CustomCommands.cpp  CustomCommands.hpp  Database.cpp  Database.hpp  Defines.cpp  Defines.hpp  Eggs.cpp  (+59 more)
src/contrib/: INIReader.hpp  JSON.hpp  json11.cpp
src/contrib/bcrypt/: crypt.h  winbcrypt.h  wrapper.c
src/contrib/sqlite/: shell.c  sqlite3pp.h  sqlite_orm.h
src/core/: CNProtocol.cpp  CNProtocol.hpp  CNShared.cpp  CNShared.hpp  CNStructs.hpp  Core.hpp  Defines.hpp  Packets.cpp  Packets.hpp
src/db/: Database.hpp  email.cpp  init.cpp  internal.hpp  login.cpp  player.cpp  shard.cpp
src/lua/: EntityWrapper.cpp  EntityWrapper.hpp  EventWrapper.cpp  EventWrapper.hpp  LuaManager.cpp  LuaManager.hpp  LuaWrapper.hpp  Manager.cpp  Manager.hpp  NPCWrapper.cpp  NPCWrapper.hpp  PlayerWrapper.cpp  PlayerWrapper.hpp  Thread.hpp  WorldWrapper.cpp  WorldWrapper.hpp
src/sandbox/: Sandbox.hpp  openbsd.cpp  seccomp.cpp
src/servers/: CNLoginServer.cpp  CNLoginServer.hpp  CNShardServer.cpp  CNShardServer.hpp  Monitor.cpp  Monitor.hpp
src/structs/: 0104.hpp  0728.hpp  1013.hpp
src/sys/: time.cpp  time.h  times.h
